unpackaged/main/default/objects/Trial_Request__c/fields/MQL_Date_Expiration__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date_Expiration__c</fullName>
    <formula>MQL_Date__c +14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL Date Expiration</label>
    <type>Date</type>
</CustomField>