unpackaged/main/default/objects/Trial_Request__c/fields/MQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date_Time__c</fullName>
    <description>Day and Time lead or contact became a MQL</description>
    <label>MQL Date Time</label>
    <type>DateTime</type>
</CustomField>