unpackaged/main/default/objects/Trial_Request__c/fields/MQL_Status__c.field-meta.xml
<CustomField>
    <fullName>MQL_Status__c</fullName>
    <label>MQL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MQL_Status</valueSetName>
    </valueSet>
</CustomField>