unpackaged/main/default/objects/Trial_Request__c/fields/MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>MQL_Type__c</fullName>
    <description>Is this a new or recycled MQL</description>
    <label>MQL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Non MQL Interaction</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>