unpackaged/main/default/objects/Trial_Request__c/fields/MQL_Within_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>MQL_Within_Business_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is calculated and populated by CRM Analytics.  It indicates whether the MQL occurred between 9 am ET to 5 pm PT.</description>
    <label>MQL Within Business Hours?</label>
    <type>Checkbox</type>
</CustomField>