unpackaged/main/default/objects/Trial_Request__c/fields/MyCase_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Customer_Status__c</fullName>
    <label>MyCase Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Status_Values</valueSetName>
    </valueSet>
</CustomField>