unpackaged/main/default/objects/Trial_Request__c/fields/MyCase_Marketing_Score__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Marketing_Score__c</fullName>
    <label>MyCase Marketing Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>