unpackaged/main/default/objects/Trial_Request__c/fields/MyCase_Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Product_Tier__c</fullName>
    <label>MyCase Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line_Tier</valueSetName>
    </valueSet>
</CustomField>