unpackaged/main/default/objects/Trial_Request__c/fields/Opportunity_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Safe_ID__c</fullName>
    <formula>casesafeid(Opportunity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity 
Casesafe ID</inlineHelpText>
    <label>Opportunity Case Safe ID</label>
    <type>Text</type>
</CustomField>