unpackaged/main/default/objects/Trial_Request__c/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <description>Hidden field from form submission</description>
    <label>Partner Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>