unpackaged/main/default/objects/Trial_Request__c/fields/Person_Actively_Being_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>Person_Actively_Being_Sequenced__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    Contact__r.Outreach_Actively_Being_Sequenced__c,
    Lead__r.Outreach_Actively_being_sequenced__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Actively Being Sequenced</label>
    <type>Checkbox</type>
</CustomField>