unpackaged/main/default/objects/Trial_Request__c/fields/Person_Company__c.field-meta.xml
<CustomField>
    <fullName>Person_Company__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    Contact__r.Account.Name,
    Lead__r.Company
)</formula>
    <label>Person Company</label>
    <type>Text</type>
</CustomField>