unpackaged/main/default/objects/Trial_Request__c/fields/Person_Current_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Person_Current_Sequence_Status__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Contact__c)), 
				Contact__r.Outreach_Current_Sequence_Status__c , 
				Lead__r.Outreach_Current_Sequence_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Current Sequence Status. Otherwise, Lead: Current Sequence Status</inlineHelpText>
    <label>Person Current Sequence Status</label>
    <type>Text</type>
</CustomField>