unpackaged/main/default/objects/Trial_Request__c/fields/Person_Current_Sequence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Person_Current_Sequence_Step_Number__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Contact__c)),
				Contact__r.Outreach_Current_Sequence_Step_Number__c,
				Lead__r.Outreach_Current_Sequence_Step_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Current Sequence Step Number. Otherwise, Lead: Current Sequence Step Number</inlineHelpText>
    <label>Person Current Sequence Step Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>