unpackaged/main/default/objects/Trial_Request__c/fields/Person_Current_Sequence_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Current_Sequence_Step_Type__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Contact__c)),
				Contact__r.Outreach_Current_Sequence_Step_Type__c,
				Lead__r.Outreach_Current_Sequence_Step_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Current Sequence Step Type. Otherwise, Lead: Current Sequence Step Type</inlineHelpText>
    <label>Person Current Sequence Step Type</label>
    <type>Text</type>
</CustomField>