unpackaged/main/default/objects/Trial_Request__c/fields/Person_Current_Sequence_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Person_Current_Sequence_Task_Due_Date__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Contact__c)),
				Contact__r.Outreach_Current_Sequence_Task_Due_Date__c, 
				Lead__r.Outreach_Current_Sequence_Task_Due_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Current Sequence Task Due Date. Otherwise, Lead: Current Sequence Task Due Date</inlineHelpText>
    <label>Person Current Sequence Task Due Date</label>
    <type>Date</type>
</CustomField>