unpackaged/main/default/objects/Trial_Request__c/fields/Person_Date_Added_to_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Person_Date_Added_to_Sequence__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Contact__c)),     
    Contact__r.Outreach_Date_Added_to_Sequence__c, 
				Lead__r.Outreach_Date_Added_to_Sequence__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Date Added to Sequence. Otherwise, Lead: Date Added to Sequence</inlineHelpText>
    <label>Person Date Added to Sequence</label>
    <type>Date</type>
</CustomField>