unpackaged/main/default/objects/Trial_Request__c/fields/Person_Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Person_Disqualified_Reason__c</fullName>
    <formula>IF(
					NOT(ISBLANK(Contact__c)), 
  			TEXT(Contact__r.Disqualified_Reason__c),
  			TEXT(Lead__r.Disqualified_Reason__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Diqualified Reason. Otherwise, Lead: Disqualified Reason</inlineHelpText>
    <label>Person Disqualified Reason</label>
    <type>Text</type>
</CustomField>