unpackaged/main/default/objects/Trial_Request__c/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    Contact__r.Email,
    Lead__r.Email
)</formula>
    <label>Person Email</label>
    <type>Text</type>
</CustomField>