unpackaged/main/default/objects/Trial_Request__c/fields/Person_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Person_Last_Activity__c</fullName>
    <formula>IF(
					NOT(ISBLANK(Contact__c)), 
					Contact__r.LastActivityDate,
 				Lead__r.LastActivityDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Last Activity Date. Otherwise, Lead: Last Activity Date</inlineHelpText>
    <label>Person Last Activity</label>
    <type>Date</type>
</CustomField>