unpackaged/main/default/objects/Trial_Request__c/fields/Person_Marketing_Nurture_Reason__c.field-meta.xml
<CustomField>
    <fullName>Person_Marketing_Nurture_Reason__c</fullName>
    <formula>IF(
					NOT(ISBLANK(Contact__c)), 
					TEXT(Contact__r.Nurture_Marketing_Reasons__c),
					TEXT(Lead__r.Nurture_Marketing_Reasons__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact Marketing Nurture Reason. Otherwise, Lead: Marketing Nurture Reason</inlineHelpText>
    <label>Person Marketing Nurture Reason</label>
    <type>Text</type>
</CustomField>