unpackaged/main/default/objects/Trial_Request__c/fields/Person_Number_of_Active_Sequences__c.field-meta.xml
<CustomField>
    <fullName>Person_Number_of_Active_Sequences__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Contact__c)), 
				VALUE(Contact__r.Outreach_Number_of_Active_Sequences__c), 
				VALUE(Lead__r.Outreach_Number_of_Active_Sequences__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Number of Active Sequences. Otherwise, Lead: Number of Active Sequences</inlineHelpText>
    <label>Person Number of Active Sequences</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>