unpackaged/main/default/objects/Trial_Request__c/fields/Person_Original_Channel__c.field-meta.xml
<CustomField>
    <fullName>Person_Original_Channel__c</fullName>
    <description>Original lead channel from lead or contact</description>
    <formula>IF( 

NOT(ISBLANK( Contact__c )), 

TEXT(Contact__r.Original_Lead_Channel__c),
TEXT(Lead__r.Original_Lead_Channel__c) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original lead channel from lead or contact</inlineHelpText>
    <label>Person Original Channel</label>
    <type>Text</type>
</CustomField>