unpackaged/main/default/objects/Trial_Request__c/fields/Person_Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Person_Original_Source__c</fullName>
    <description>Original lead source from lead or contact</description>
    <formula>IF( 

NOT(ISBLANK( Contact__c )), 

TEXT(Contact__r.Original_Lead_Source__c),
TEXT(Lead__r.Original_Lead_Source__c) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original lead source from lead or contact</inlineHelpText>
    <label>Person Original Source</label>
    <type>Text</type>
</CustomField>