unpackaged/main/default/objects/Trial_Request__c/fields/Person_Owner__c.field-meta.xml
<CustomField>
    <fullName>Person_Owner__c</fullName>
    <formula>IF(
   NOT(ISBLANK( Contact__c)),
   HYPERLINK( &quot;/&quot; &amp;  Contact__r.OwnerId, Contact__r.Contact_Owner_Formula__c), 
   Lead__r.Lead_Owner_link__c
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Owner</label>
    <type>Text</type>
</CustomField>