unpackaged/main/default/objects/Trial_Request__c/fields/Person_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Person_Owner_Active__c</fullName>
    <formula>IF(
					NOT(ISBLANK(Contact__c)), 
					Contact__r.Owner_Active__c,
 				Lead__r.Owner_Active__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is not null, Contact: Owner Active. Otherwise, Lead: Owner Active</inlineHelpText>
    <label>Person Owner Active</label>
    <type>Checkbox</type>
</CustomField>