unpackaged/main/default/objects/Trial_Request__c/fields/Person_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Owner_Name__c</fullName>
    <formula>IF( NOT( ISBLANK(Contact__c)),

Contact__r.Contact_Owner_Formula__c, 
Lead__r.Lead_Owner_Formula__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Owner Name</label>
    <type>Text</type>
</CustomField>