unpackaged/main/default/objects/Trial_Request__c/fields/Person_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Person_Owner_Role__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Contact__c)),
    Contact__r.Owner.Role_Name__c,
    IF(
        LEFT(Lead__r.OwnerId,3)=&quot;00G&quot;,
        &quot;Queue&quot;,
        Lead__r.Owner:User.Role_Name__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Owner Role</label>
    <type>Text</type>
</CustomField>