unpackaged/main/default/objects/Trial_Request__c/fields/Person_Referral_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Person_Referral_Partnership__c</fullName>
    <formula>If(
   ISBLANK( Contact__c ),
   HYPERLINK( &quot;/&quot; + Lead__r.Referral_Partnership__c,  Lead__r.Referral_Partnership__r.Name), 
   HYPERLINK( &quot;/&quot; + Contact__r.Referral_Partnership__c, Contact__r.Referral_Partnership__r.Name)
   )


/* replaced on 9/15/2023
If(
   ISBLANK( Contact__c ),
   Lead__r.Referral_Partnership__c,
   Contact__r.Referral_Partnership__c
   )
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Referral Partnership</label>
    <type>Text</type>
</CustomField>