unpackaged/main/default/objects/Trial_Request__c/fields/Person_Referral_Partnership_Channel__c.field-meta.xml
<CustomField>
    <fullName>Person_Referral_Partnership_Channel__c</fullName>
    <formula>If( ISBLANK( Contact__c ),

  IF(
    ISBLANK(Lead__r.Referral_Partnership__c),
    &quot;Direct&quot;,
    CASE(
       Lead__r.Referral_Partnership__r.RecordType.Name,
      &quot;Affinity&quot;, &quot;Affinity&quot;,
      &quot;ISV Partner&quot;, &quot;Tech Partner&quot;,
      &quot;Consultant&quot;, &quot;Tech Partner&quot;,
      &quot;Other&quot;
        )
    ),
  IF(
    ISBLANK(Contact__r.Referral_Partnership__c),
    &quot;Direct&quot;,
    CASE(
       Contact__r.Referral_Partnership__r.RecordType.Name,
      &quot;Affinity&quot;, &quot;Affinity&quot;,
      &quot;ISV Partner&quot;, &quot;Tech Partner&quot;,
      &quot;Consultant&quot;, &quot;Tech Partner&quot;,
      &quot;Other&quot;
         )
    )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Referral Partnership Channel</label>
    <type>Text</type>
</CustomField>