unpackaged/main/default/objects/Trial_Request__c/fields/Person_Status__c.field-meta.xml
<CustomField>
    <fullName>Person_Status__c</fullName>
    <formula>IF(
				NOT(ISBLANK(Contact__c)),
				TEXT(Contact__r.Status__c),
				TEXT(Lead__r.Status))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Contact is populated, Contact Status. Else, Lead Status.</inlineHelpText>
    <label>Person Status</label>
    <type>Text</type>
</CustomField>