unpackaged/main/default/objects/Trial_Request__c/fields/Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Type__c</fullName>
    <formula>IF(
			NOT(ISBLANK(Contact__c)),   
				&quot;Contact&quot;, 
				&quot;Lead&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula, If Contact is not null &quot;Contact&quot;, else  &quot;Lead&quot;</inlineHelpText>
    <label>Person Type</label>
    <type>Text</type>
</CustomField>