unpackaged/main/default/objects/Trial_Request__c/fields/PPCS__c.field-meta.xml
<CustomField>
    <fullName>PPCS__c</fullName>
    <description>Hidden field from form submission</description>
    <label>PPCS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>