unpackaged/main/default/objects/Trial_Request__c/fields/Probably_Client_of_Active_Firm__c.field-meta.xml
<CustomField>
    <fullName>Probably_Client_of_Active_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check via Workato Inbound Request flow if firm name matches existing customer name and email address is personal</description>
    <label>Probably Client of Active Firm</label>
    <type>Checkbox</type>
</CustomField>