unpackaged/main/default/objects/Trial_Request__c/fields/Probably_MyCase_gov__c.field-meta.xml
<CustomField>
    <fullName>Probably_MyCase_gov__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if MyCase.gov probable lead</description>
    <label>Probably MyCase.gov</label>
    <type>Checkbox</type>
</CustomField>