unpackaged/main/default/objects/Trial_Request__c/fields/Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>Product_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Environment</label>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipName>Trial_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>