unpackaged/main/default/objects/Trial_Request__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Product interest from the lead or contact</description>
    <label>Product Interest</label>
    <length>100</length>
    <type>Text</type>
</CustomField>