unpackaged/main/default/objects/Trial_Request__c/fields/Professional_Service_Status__c.field-meta.xml
<CustomField>
    <fullName>Professional_Service_Status__c</fullName>
    <inlineHelpText>This picklist indicates the status of a Professional Service inbound request form only. Do not use this field if you are a Sales rep.</inlineHelpText>
    <label>Professional Service Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>