unpackaged/main/default/objects/Trial_Request__c/fields/Qualifying_Rep__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qualifying Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inbound_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>