unpackaged/main/default/objects/Trial_Request__c/fields/Qualifying_Rep_Role__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep_Role__c</fullName>
    <label>Qualifying Rep Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>