unpackaged/main/default/objects/Trial_Request__c/fields/Referrer_Work_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Work_Email_Address__c</fullName>
    <description>#4841</description>
    <label>Referrer Work Email Address</label>
    <type>Email</type>
</CustomField>