unpackaged/main/default/objects/Trial_Request__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <formula>DATEVALUE( Requested_At__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>