unpackaged/main/default/objects/Trial_Request__c/fields/Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Requested_At__c</fullName>
    <description>Date and time when the trial was requested</description>
    <inlineHelpText>Date and time when the trial was requested</inlineHelpText>
    <label>Requested At</label>
    <type>DateTime</type>
</CustomField>