unpackaged/main/default/objects/Trial_Request__c/fields/SAL__c.field-meta.xml
<CustomField>
    <fullName>SAL__c</fullName>
    <formula>IF( ISBLANK( SAL_Date__c), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>