unpackaged/main/default/objects/Trial_Request__c/fields/SAL_Date__c.field-meta.xml
<CustomField>
    <fullName>SAL_Date__c</fullName>
    <label>SAL Date</label>
    <type>Date</type>
</CustomField>