unpackaged/main/default/objects/Trial_Request__c/fields/Sales_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Sales_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if request was assigned to Sales</description>
    <label>Sales Assigned</label>
    <type>Checkbox</type>
</CustomField>