unpackaged/main/default/objects/Trial_Request__c/fields/Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle__c</fullName>
    <formula>IF(

OR(
ISBLANK( Opportunity__c ),
ISBLANK( MQL_Date__c )
), 0,

IF( DATEVALUE(Opportunity__r.CreatedDate) &lt; MQL_Date__c,

IF( Opportunity__r.CloseDate &lt; MQL_Date__c, 1,

Opportunity__r.CloseDate - MQL_Date__c + 1),

Opportunity__r.Sales_Cycle__c

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Cycle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>