unpackaged/main/default/objects/Trial_Request__c/fields/Sales_Token__c.field-meta.xml
<CustomField>
    <fullName>Sales_Token__c</fullName>
    <label>Sales Token</label>
    <length>250</length>
    <type>Text</type>
</CustomField>