unpackaged/main/default/objects/Trial_Request__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>CASE( Trial_Status__c,
&quot;Activated&quot;, 1, 0) + 

IF( Trial_Intent_Provided__c, 1, 0) + 

IF( Domain_Type__c = &quot;&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>