unpackaged/main/default/objects/Trial_Request__c/fields/Self_Serve_Signup_Rep_Assisted_Type__c.field-meta.xml
<CustomField>
    <fullName>Self_Serve_Signup_Rep_Assisted_Type__c</fullName>
    <label>Self-Serve Signup Rep Assisted Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete Application</fullName>
            </value>
            <value>
                <fullName>Missing Documents</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>