unpackaged/main/default/objects/Trial_Request__c/fields/SQL__c.field-meta.xml
<CustomField>
    <fullName>SQL__c</fullName>
    <formula>IF( ISBLANK( Opportunity__c ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SQL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>