unpackaged/main/default/objects/Trial_Request__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>US state that requested trial came from</description>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>