unpackaged/main/default/objects/Trial_Request__c/fields/System_Rejected__c.field-meta.xml
<CustomField>
    <fullName>System_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE when trial is rejected via automated validation in Workato</description>
    <inlineHelpText>Set to TRUE when trial is rejected via automated validation in Workato</inlineHelpText>
    <label>System Rejected</label>
    <type>Checkbox</type>
</CustomField>