unpackaged/main/default/objects/Trial_Request__c/fields/Temp3_Include_in_Normalization__c.field-meta.xml
<CustomField>
    <fullName>Temp3_Include_in_Normalization__c</fullName>
    <formula>if(
    (TEMP_Company_Word_Count__c = &quot;Include&quot; &amp;&amp;
     TEMP_Is_Score_Threshold__c = &quot;Include&quot; &amp;&amp;
     TEMP_Payments_Applications__c = &quot;Include&quot; &amp;&amp;
     Temp_Personal_Domain_Check__c = &quot;Include&quot; &amp;&amp;
     TEMP_Trial_Demo_Company_Keywords__c = &quot;Include&quot;
    ), TRUE, FALSE
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp3 - Include in Normalization</label>
    <type>Checkbox</type>
</CustomField>