unpackaged/main/default/objects/Trial_Request__c/fields/TEMP_Company_Word_Count__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Company_Word_Count__c</fullName>
    <formula>IF (
    LEN(TRIM(Person_Company__c))-LEN(SUBSTITUTE(TRIM(Person_Company__c),&quot; &quot;,&quot;&quot;))+1 &gt;1 , 
    &quot;Include&quot;, &quot;Exclude&quot;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEMP- Company Word Count</label>
    <type>Text</type>
</CustomField>